--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
 
 		<aside>
 			Interests: a;skfng'qeknmrg'i'nmalvknavlknevf
+			<p>this is my sideline</p>
 		</aside>
 	</div>
 
-
 	<footer>
-		<ul><li>www.google.com</li>
-		</ul>
+		<ul>
+			<li>www.google.com</li>
+			</ul>
 	</footer>
 </body>
