--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<h1>Jeremy Boviard</h1>
 	</header>
 	<div id="container">
-		<img src="assets/redbrick.jpg"/>
+		<img src="Assets/redbrick.jpg"/>
 		<h2>This is where my blog link goes</h2>
 		<section>
 			<p>Born and raised in Newton, Massachusetts, Jeremy Boviard is a Boston man through and through (which means he never refers to the city as "Beantown"). He is a huge fan of the Red Sox, Celtics, and Patriots (sorry, hockey heads), and laments that the losses always sting more than the wins sing. He is an avid lover of film, and television, and always appreciates a well-told tale in any form. Jeremy graduated from Northeastern University in 2011 with a B.A. in Communications and a concentration in Media Studies, and as a student he was actively involved in Northeastern's television station, NUTV, in all phases of production, ultimately serving as their President. Overall Jeremy Boviard has worn many different hats, from youth educator to Starbucks Barista to being the digital voice of an animated cow, and he eagerly anticipates wherever his journey takes him next.</p>
